tests/baselines/reference/defaultBestCommonTypesHaveDecls.errors.txt
==== tests/cases/compiler/defaultBestCommonTypesHaveDecls.ts (3 errors) ====
    
    var obj1: {};
    
    obj1.length;
         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
     
     
    
    var obj2: Object;
    
    obj2.length;
         ~~~~~~
!!! error TS2339: Property 'length' does not exist on type 'Object'.
     
     
    
    function concat<T>(x: T, y: T): T { return null; }
    
    var result = concat(1, "");
    
    var elementCount = result.length; // would like to get an error by now
                              ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
    